29-Feb-2016 Issue #164. Simplified compiler interface Intersect and Delta extension methods, by adding extension methods to each datatype used as properties in those interfaces, to performan intersection and complement operation on the data. This has not changed behaviour - just simplified the code for future improvements.

29-Feb-2016 Issue #162. Added VisualStudio 2012 support.

28-Feb-2016 Fixes #161. Added Boolean property, DoNotDereferenceTarget, to the Publisher.IMakeLinkSettings interface, defaulting to true. When used with symbolic links to directories repeatedly, this stops circular links from being created, as the existing symlink is not followed. In this context, it does require the Force property to be set to true (it is by default). On OSX, the circular link was created on the second build run where frameworks were published, causing a subsequent clean build to fail.

28-Feb-2016 Bam.Core.TokenizedStringArray and C.PreprocessorDefinitions now include Intersect and Complement functions, which simplify compiler settings code.

28-Feb-2016 Simplified settings code for compilers with the updated Bam.Core.StringArray.Intersect and Complement functions.

28-Feb-2016 Fixes #160. Removed obsolete Bam.Core.ISetOperations interface. This was used pre-v1.0.0 and pre-LINQ support. Only referenced in Bam.Core.StringArray, and now replaced with an improved version that works better with the Bam.Core.Array base class.

25-Feb-2016 Fixes #158. C.ProceduralHeaderFile does not write a header inclusion guard if the override to GuardString returns null.

24-Feb-2016 Fixes #157. Xcode custom shell scripts now fail the build if any commands run return a non-zero exit code. This uses 'set -e', which bash will exit immediately if any command executed fails.
